deploy/k8s/observability/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: activitiesapp
spec:
  selector:
    app: grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
