deploy/k8s/observability/otel-collector-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: activitiesapp
spec:
  selector:
    app: otel-collector
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
    - name: prom-metrics
      port: 8889
      targetPort: 8889
    - name: health
      port: 13133
      targetPort: 13133
  type: ClusterIP
