deploy/k8s/observability/uptime-kuma-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: activitiesapp
spec:
  selector:
    app: uptime-kuma
  ports:
    - port: 3001
      targetPort: 3001
